--- a/ui/vue.html
+++ b/ui/vue.html
@@ -31,7 +31,7 @@
           >
             <img :src="info.logo" height="350">
             <h1 class="white--text mb-2 display-1 text-xs-center">${ info.message }</h1>
-            <div class="subheading mb-3 text-xs-center">Served by <b>${ info.hostname }</b></div>
+            <div class="subheading mb-3 text-xs-center">Served by OBSIT <b>${ info.hostname }</b></div>
             <v-btn
               class="red darken-2 mt-5"
               dark
