--- a/ui/vue.html
+++ b/ui/vue.html
@@ -38,7 +38,7 @@
               large
               @click="postBackend()"
             >
-              <v-badge left color="red">
+              <v-badge left color="blue">
                 <span slot="badge">${ pings }</span>
                 <v-icon left dark>touch_app</v-icon>
               </v-badge>
